skeleton of body

--- a/index.html
+++ b/index.html
@@ -7,5 +7,92 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <header><h1>Penny Kristiansen</h1></header>
+    <main>
+      <section id="intro">
+        <h1>Hejsa!</h1>
+        <h1>Jeg er Penny</h1>
+        <p>Aspirerende frontend udvikler</p>
+        <p>multimediedesign studerende*, med en passion for kodning.</p>
+        <a href="#skills"> Mine kompetencer</a>
+        <a href="#projects">Tidligere projekter</a>
+
+        <img id="portait" src="https://cataas.com/cat" alt="portræt billede af Penny Kristiansen" />
+      </section>
+      <section id="skills" class="scrollSection">
+        <h2>kompetencer</h2>
+
+        <h3>programmering</h3>
+        <ul>
+          <li>HTML, CSS og JS</li>
+          <li>Astro</li>
+          <li>Git/GitHub</li>
+          <li>React</li>
+          <li>node.js</li>
+        </ul>
+
+        <h3>design</h3>
+        <ul>
+          <li>figma</li>
+          <li>Adobe Illustrator</li>
+          <li>Adobe after effects</li>
+          <li>Adobe Photoshop</li>
+        </ul>
+
+        <h3>sprog</h3>
+        <ul>
+          <li>Dansk</li>
+          <li>Engelsk</li>
+        </ul>
+      </section>
+      <section id="projects">
+        <h2>tidligere projekter</h2>
+
+        <h3>Hillerød bowlsklub</h3>
+        <p>Eksamensprojektet på 2.semester omhandlede et komplet redesign af hillerød bowlsklub's hjemmeside. Produktet blev lavet i astro som jeg var hovedansvarlig for.</p>
+        <ul>
+          <li>
+            <a href="https://hillerodbowls.netlify.app/" target="_blank">Hillerød Bowlklub redesign</a>
+          </li>
+          <li>
+            <a href="https://github.com/Penny-EK/10_eksamen " target="_blank">Github Repository</a>
+          </li>
+        </ul>
+
+        <h3>To-do liste</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, odit.</p>
+        <ul>
+          <li>
+            <a href="https://penny-ek.github.io/toDo/" target="_blank">To-do liste</a>
+          </li>
+          <li>
+            <a href="https://github.com/Penny-EK/toDo" target="_blank">Github Repository</a>
+          </li>
+        </ul>
+
+        <h3>cirkulær lab</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, possimus?</p>
+        <ul>
+          <li>
+            <a href="https://circularlab-t09-g5.netlify.app/events/" target="_blank">Cirkulær lab redesign</a>
+          </li>
+          <li>
+            <a href="https://github.com/multimediemartin/circular_lab" target="_blank">Github Repository</a>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <h3>Kontakt mig</h3>
+
+      <p>Email: <a href="mailto:penny@toothlesstiger.com">penny@toothlesstiger.com</a></p>
+      <p>Telefon: +45 53 83 75 15</p>
+
+      <!-- udfyld links -->
+      <a href="" target="_blank">LinkedIn</a>
+      <a href="" target="_blank">CV</a>
+      <a href="https://github.com/Penny-EK" target="_blank">GitHub</a>
+    </footer>
+  </body>
 </html>
