--- a/index.html
+++ b/index.html
@@ -3,96 +3,124 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Penny Kristiansen</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>Ansøgning Penny Kristiansen</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="layout.css" />
     <script src="script.js"></script>
+    <!-- SUSE Monos -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=SUSE+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <header><h1>Penny Kristiansen</h1></header>
+    <header>
+      <h1>Penny Kristiansen</h1>
+    </header>
     <main>
       <section id="intro">
-        <h1>Hejsa!</h1>
-        <h1>Jeg er Penny</h1>
-        <p>Aspirerende frontend udvikler</p>
-        <p>multimediedesign studerende*, med en passion for kodning.</p>
-        <a href="#skills"> Mine kompetencer</a>
-        <a href="#projects">Tidligere projekter</a>
-
-        <img id="portait" src="https://cataas.com/cat" alt="portræt billede af Penny Kristiansen" />
+        <div class="maxWidth grid1-1">
+          <div class="col">
+            <h1>Hejsa!</h1>
+            <h1>Jeg er Penny</h1>
+            <p class="tagline">Aspirerende frontend udvikler</p>
+            <p>multimediedesign studerende*, med en passion for kodning.</p>
+            <!-- <p>Jeg kunne godt tænke mig en praktikplads som !!!</p> -->
+            <a href="#skills"> Mine kompetencer</a>
+            <a href="#projects">Tidligere projekter</a>
+          </div>
+          <img id="portait" src="https://cataas.com/cat" alt="portræt billede af Penny Kristiansen" />
+        </div>
       </section>
-      <section id="skills" class="scrollSection">
-        <h2>kompetencer</h2>
-
-        <h3>programmering</h3>
-        <ul>
-          <li>HTML, CSS og JS</li>
-          <li>Astro</li>
-          <li>Git/GitHub</li>
-          <li>React</li>
-          <li>node.js</li>
-        </ul>
-
-        <h3>design</h3>
-        <ul>
-          <li>figma</li>
-          <li>Adobe Illustrator</li>
-          <li>Adobe after effects</li>
-          <li>Adobe Photoshop</li>
-        </ul>
-
-        <h3>sprog</h3>
-        <ul>
-          <li>Dansk</li>
-          <li>Engelsk</li>
-        </ul>
+      <section id="skills">
+        <div class="maxWidth">
+          <h2>kompetencer</h2>
+          <div class="grid1-1-1">
+            <div class="col">
+              <h3>programmering</h3>
+              <ul>
+                <li>HTML, CSS og JS</li>
+                <li>Astro</li>
+                <li>Git/GitHub</li>
+                <li>React <span class="colorHighlight">(under læring)</span></li>
+                <li>node.js <span class="colorHighlight">(under læring)</span></li>
+              </ul>
+            </div>
+            <div class="col">
+              <h3>design</h3>
+              <ul>
+                <li>figma</li>
+                <li>Adobe Illustrator</li>
+                <li>Adobe after effects</li>
+                <li>Adobe Photoshop</li>
+              </ul>
+            </div>
+            <div class="col">
+              <h3>sprog</h3>
+              <ul>
+                <li>Dansk</li>
+                <li>Engelsk</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </section>
       <section id="projects">
-        <h2>tidligere projekter</h2>
+        <div class="maxWidth">
+          <h2>tidligere projekter</h2>
+          <div class="grid1-1-1">
+            <h3>Hillerød bowlsklub</h3>
+            <p>Eksamensprojektet på 2.semester omhandlede et komplet redesign af hillerød bowlsklub's hjemmeside. Produktet blev lavet i astro som jeg var hovedansvarlig for.</p>
+            <ul>
+              <li>
+                <a href="https://hillerodbowls.netlify.app/" target="_blank">Hillerød Bowlklub redesign</a>
+              </li>
+              <li>
+                <a href="https://github.com/Penny-EK/10_eksamen " target="_blank">Github Repository</a>
+              </li>
+            </ul>
+          </div>
+          <div class="partialDivider"></div>
+          <div class="grid1-1-1">
+            <h3>To-do liste</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, odit.</p>
+            <ul>
+              <li>
+                <a href="https://penny-ek.github.io/toDo/" target="_blank">To-do liste</a>
+              </li>
+              <li>
+                <a href="https://github.com/Penny-EK/toDo" target="_blank">Github Repository</a>
+              </li>
+            </ul>
+          </div>
+          <div class="partialDivider"></div>
+          <div class="grid1-1-1">
+            <h3>cirkulær lab</h3>
 
-        <h3>Hillerød bowlsklub</h3>
-        <p>Eksamensprojektet på 2.semester omhandlede et komplet redesign af hillerød bowlsklub's hjemmeside. Produktet blev lavet i astro som jeg var hovedansvarlig for.</p>
-        <ul>
-          <li>
-            <a href="https://hillerodbowls.netlify.app/" target="_blank">Hillerød Bowlklub redesign</a>
-          </li>
-          <li>
-            <a href="https://github.com/Penny-EK/10_eksamen " target="_blank">Github Repository</a>
-          </li>
-        </ul>
-
-        <h3>To-do liste</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, odit.</p>
-        <ul>
-          <li>
-            <a href="https://penny-ek.github.io/toDo/" target="_blank">To-do liste</a>
-          </li>
-          <li>
-            <a href="https://github.com/Penny-EK/toDo" target="_blank">Github Repository</a>
-          </li>
-        </ul>
-
-        <h3>cirkulær lab</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, possimus?</p>
-        <ul>
-          <li>
-            <a href="https://circularlab-t09-g5.netlify.app/events/" target="_blank">Cirkulær lab redesign</a>
-          </li>
-          <li>
-            <a href="https://github.com/multimediemartin/circular_lab" target="_blank">Github Repository</a>
-          </li>
-        </ul>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, possimus?</p>
+            <ul>
+              <li>
+                <a href="https://circularlab-t09-g5.netlify.app/events/" target="_blank">Cirkulær lab redesign</a>
+              </li>
+              <li>
+                <a href="https://github.com/multimediemartin/circular_lab" target="_blank">Github Repository</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
-      <h3>Kontakt mig</h3>
+      <div class="contact">
+        <h3>Kontakt mig</h3>
 
-      <p>Email: <a href="mailto:penny@toothlesstiger.com">penny@toothlesstiger.com</a></p>
-      <p>Telefon: +45 53 83 75 15</p>
+        <p>Email: <a href="mailto:penny@toothlesstiger.com">penny@toothlesstiger.com</a></p>
+        <p>Telefon: +45 53 83 75 15</p>
 
-      <!-- udfyld links -->
-      <a href="" target="_blank">LinkedIn</a>
-      <a href="" target="_blank">CV</a>
-      <a href="https://github.com/Penny-EK" target="_blank">GitHub</a>
+        <!-- udfyld links -->
+        <a href="" target="_blank">LinkedIn</a>
+        <a href="" target="_blank">CV</a>
+        <a href="https://github.com/Penny-EK" target="_blank">GitHub</a>
+      </div>
     </footer>
   </body>
 </html>
