--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ansøgning Penny Kristiansen</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="layout.css" />
+    <link rel="stylesheet" href="animations.css" />
     <script src="script.js"></script>
     <!-- SUSE Monos -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -27,15 +28,17 @@
         <section id="intro" class="scrollSection">
           <div class="maxWidth grid1-1">
             <div class="col">
-              <h1>Hejsa!</h1>
+              <h2>Hejsa!</h2>
               <h1>Jeg er Penny</h1>
               <p class="tagline">Aspirerende frontend udvikler</p>
               <p>multimediedesign studerende*, med en passion for kodning.</p>
               <!-- <p>Jeg kunne godt tænke mig en praktikplads som !!!</p> -->
-              <a href="#skills"> Mine kompetencer</a>
-              <a href="#projects">Tidligere projekter</a>
+              <div class="grid1-1">
+                <a href="#skills"> Mine kompetencer</a>
+                <a href="#projects">Tidligere projekter</a>
+              </div>
             </div>
-            <img id="portait" src="https://cataas.com/cat" alt="portræt billede af Penny Kristiansen" />
+            <img id="portait" src="placeholder.jpeg" alt="portræt billede af Penny Kristiansen" />
           </div>
         </section>
         <section id="skills" class="scrollSection">
