--- a/index.html
+++ b/index.html
@@ -31,14 +31,33 @@
               <h2>Hejsa!</h2>
               <h1>Jeg er Penny</h1>
               <p class="tagline">Aspirerende frontend udvikler</p>
-              <p>multimediedesign studerende*, med en passion for kodning.</p>
-              <!-- <p>Jeg kunne godt tænke mig en praktikplads som !!!</p> -->
+              <p>- nysgerrig, kreativ og vild med webdesign. Her kan du hurtigt finde mine kontaktoplysninger og se, hvad jeg brænder for.</p>
+
               <div class="grid1-1">
                 <a href="#skills"> Mine kompetencer</a>
                 <a href="#projects">Tidligere projekter</a>
               </div>
             </div>
             <img id="portait" src="placeholder.jpeg" alt="portræt billede af Penny Kristiansen" />
+          </div>
+        </section>
+        <section id="whyMe" class="scrollSection">
+          <div class="maxWidth grid1-1">
+            <div class="col">
+              <h2>Hvem er jeg?</h2>
+              <p>Kort om mig. Jeg er 21 år gammel. Jeg har stor interesse for film og musik, derudover vil jeg aldrig klage over en dag i naturen.</p>
+              <p>Jeg er en <span class="colorHighlight">kreativ</span> sjæl, der elsker at skabe og designe. Jeg er meget nysgerrig og elsker at lære nye ting, især når det kommer til kodning og webudvikling.</p>
+            </div>
+            <div class="col">
+              <h3>hvad vil jeg gerne?</h3>
+              <p>i mit praktikforløb vil jeg gerne have udvidet min horisonter inde for kodning, samt blive mere komfortabel med UI/UX.</p>
+            </div>
+            <div class="col">
+              <h3>kort beskrevet</h3>
+              <ul>
+                <li>oijefoijewfoi</li>
+              </ul>
+            </div>
           </div>
         </section>
         <section id="skills" class="scrollSection">
@@ -121,17 +140,25 @@
       </article>
     </main>
     <footer>
-      <div class="contact">
-        <h3>Kontakt mig</h3>
-
-        <p>Email: <a href="mailto:penny@toothlesstiger.com">penny@toothlesstiger.com</a></p>
-        <p>Telefon: +45 53 83 75 15</p>
-
+      <h3>Kontakt mig</h3>
+      <ul>
+        <li>
+          <p>Email: <a href="mailto:penny@toothlesstiger.com">penny@toothlesstiger.com</a></p>
+        </li>
+        <li>
+          <p>Telefon: +45 53 83 75 15</p>
+        </li>
         <!-- udfyld links -->
-        <a href="" target="_blank">LinkedIn</a>
-        <a href="" target="_blank">CV</a>
-        <a href="https://github.com/Penny-EK" target="_blank">GitHub</a>
-      </div>
+        <li>
+          <a href="" target="_blank">LinkedIn</a>
+        </li>
+        <li>
+          <a href="" target="_blank">CV</a>
+        </li>
+        <li>
+          <a href="https://github.com/Penny-EK" target="_blank">GitHub</a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
