edited link to cirkulaerlab

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, possimus?</p>
               <ul>
                 <li>
-                  <a href="https://circularlab-t09-g5.netlify.app/events/" target="_blank">Cirkulær lab redesign</a>
+                  <a href="https://circularlab-t09-g5.netlify.app/" target="_blank">Cirkulær lab redesign</a>
                 </li>
                 <li>
                   <a href="https://github.com/multimediemartin/circular_lab" target="_blank">Github Repository</a>
