changed font sizes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section id="intro" class="scrollSection">
           <div class="maxWidth grid1-1">
             <div class="col">
-              <h2>Hejsa!</h2>
+              <h2>Hello World!</h2>
               <h1>Jeg er Penny</h1>
               <p class="tagline">Aspirerende frontend udvikler</p>
               <p>- nysgerrig, kreativ og vild med webdesign. Her kan du hurtigt finde mine kontaktoplysninger og se, hvad jeg brænder for.</p>
@@ -111,7 +111,7 @@
             <div class="partialDivider"></div>
             <div class="grid1-1-1">
               <h3>To-do liste</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, odit.</p>
+              <p>To-do liste, med fokus på arrays og funktioner som localStorage</p>
               <ul>
                 <li>
                   <a href="https://penny-ek.github.io/toDo/" target="_blank">To-do liste</a>
