--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="#projects">Tidligere projekter</a>
               </div>
             </div>
-            <img id="portait" src="placeholder.jpeg" alt="portræt billede af Penny Kristiansen" />
+            <img id="portait" src="pennyKristiansen.jpeg" alt="portræt billede af Penny Kristiansen" />
           </div>
         </section>
         <section id="whyMe" class="scrollSection">
@@ -53,10 +53,8 @@
               <p>i mit praktikforløb vil jeg gerne have udvidet min horisonter inde for kodning, samt blive mere komfortabel med UI/UX.</p>
             </div>
             <div class="col">
-              <h3>kort beskrevet</h3>
-              <ul>
-                <li>oijefoijewfoi</li>
-              </ul>
+              <h3>Fun facts om mig</h3>
+              <p id="funFactContainer"></p>
             </div>
           </div>
         </section>
