--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header>
-      <h1>Penny Kristiansen</h1>
+      <a href=""><h1>Penny Kristiansen</h1></a>
       <button id="themeSwitcher">
         <!-- darkmode -->
         <svg id="moonIcon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z" /></svg>
@@ -25,6 +25,7 @@
     </header>
     <main>
       <article class="scrollWrapper">
+        <!-- intro -->
         <section id="intro" class="scrollSection">
           <div class="maxWidth grid1-1">
             <div class="col">
@@ -41,26 +42,31 @@
             <img id="portait" src="pennyKristiansen.jpeg" alt="portræt billede af Penny Kristiansen" />
           </div>
         </section>
+
+        <!-- get to know me -->
         <section id="whyMe" class="scrollSection">
           <div class="maxWidth grid1-1">
             <div class="col">
               <h2>Hvem er jeg?</h2>
               <p>Kort om mig. Jeg er 21 år gammel. Jeg har stor interesse for film og musik, derudover vil jeg aldrig klage over en dag i naturen.</p>
-              <p>Jeg er en <span class="colorHighlight">kreativ</span> sjæl, der elsker at skabe og designe. Jeg er meget nysgerrig og elsker at lære nye ting, især når det kommer til kodning og webudvikling.</p>
+              <p>Jeg er en kreativ sjæl, der elsker at skabe og designe. Jeg er meget nysgerrig og elsker at lære nye ting, især når det kommer til kodning og webudvikling.</p>
             </div>
             <div class="col">
               <h3>hvad vil jeg gerne?</h3>
               <p>i mit praktikforløb vil jeg gerne have udvidet min horisonter inde for kodning, samt blive mere komfortabel med UI/UX.</p>
             </div>
-            <div class="col">
+            <div class="col funFacts">
               <h3>Fun facts om mig</h3>
               <p id="funFactContainer"></p>
             </div>
           </div>
         </section>
+
+        <!-- skills -->
         <section id="skills" class="scrollSection">
           <div class="maxWidth">
             <h2>kompetencer</h2>
+            <p>Her er en lille oversigt over nogen af de ting jeg har arbejdet med:</p>
             <div class="grid1-1-1">
               <div class="col">
                 <h3>programmering</h3>
@@ -91,6 +97,8 @@
             </div>
           </div>
         </section>
+
+        <!-- previous projects -->
         <section id="projects" class="scrollSection">
           <div class="maxWidth">
             <h2>tidligere projekter</h2>
@@ -122,8 +130,7 @@
             <div class="partialDivider"></div>
             <div class="grid1-1-1">
               <h3>cirkulær lab</h3>
-
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam, possimus?</p>
+              <p>Et casearbejde med EK's Cirkulær lab, projektet blev lavet i astro og havde særligt fokus på at lave Fetche data fra Supabase</p>
               <ul>
                 <li>
                   <a href="https://circularlab-t09-g5.netlify.app/" target="_blank">Cirkulær lab redesign</a>
@@ -146,12 +153,8 @@
         <li>
           <p>Telefon: +45 53 83 75 15</p>
         </li>
-        <!-- udfyld links -->
         <li>
-          <a href="" target="_blank">LinkedIn</a>
-        </li>
-        <li>
-          <a href="" target="_blank">CV</a>
+          <a href="https://dk.linkedin.com/in/pennykristiansen" target="_blank">LinkedIn</a>
         </li>
         <li>
           <a href="https://github.com/Penny-EK" target="_blank">GitHub</a>
