--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="#projects">Tidligere projekter</a>
               </div>
             </div>
-            <img id="portait" src="pennyKristiansen.jpeg" alt="portræt billede af Penny Kristiansen" />
+            <img id="portait" src="pennyKristiansen.webp" alt="portræt billede af Penny Kristiansen" />
           </div>
         </section>
 
