--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="col">
               <h3>hvad vil jeg gerne?</h3>
-              <p>i mit praktikforløb vil jeg gerne have udvidet min horisonter inde for kodning, samt blive mere komfortabel med UI/UX.</p>
+              <p>I mit kommende praktikforløb ønsker jeg at styrke mine kompetencer inden for frontend-udvikling og udvide min horisont inden for kodning. Jeg vil samtidig arbejde på at blive endnu mere komfortabel med UI/UX-design og skabe brugervenlige digitale oplevelser.</p>
             </div>
             <div class="col funFacts">
               <h3>Fun facts om mig</h3>
