comments in code

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=SUSE+Mono:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet" />
   </head>
   <body>
+    <!-- header -->
     <header>
       <a href=""><h1>Penny Kristiansen</h1></a>
       <button id="themeSwitcher">
@@ -57,6 +58,7 @@
             </div>
             <div class="col funFacts">
               <h3>Fun facts om mig</h3>
+              <!-- gets content from script -->
               <p id="funFactContainer"></p>
             </div>
           </div>
@@ -102,6 +104,7 @@
         <section id="projects" class="scrollSection">
           <div class="maxWidth">
             <h2>tidligere projekter</h2>
+            <!-- about: hillerød bowlsklub -->
             <div class="grid1-1-1">
               <h3>Hillerød bowlsklub</h3>
               <p>Eksamensprojektet på 2.semester omhandlede et komplet redesign af hillerød bowlsklub's hjemmeside. Produktet blev lavet i astro som jeg var hovedansvarlig for.</p>
@@ -115,6 +118,8 @@
               </ul>
             </div>
             <div class="partialDivider"></div>
+
+            <!-- about: to-do list -->
             <div class="grid1-1-1">
               <h3>To-do liste</h3>
               <p>To-do liste, med fokus på arrays og funktioner som localStorage</p>
@@ -128,6 +133,7 @@
               </ul>
             </div>
             <div class="partialDivider"></div>
+            <!-- about: cirkulær lab -->
             <div class="grid1-1-1">
               <h3>cirkulær lab</h3>
               <p>Et casearbejde med EK's Cirkulær lab, projektet blev lavet i astro og havde særligt fokus på at lave Fetche data fra Supabase</p>
