comment in incex

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
               </ul>
             </div>
             <div class="partialDivider"></div>
+
             <!-- about: cirkulær lab -->
             <div class="grid1-1-1">
               <h3>cirkulær lab</h3>
@@ -150,6 +151,7 @@
         </section>
       </article>
     </main>
+    <!-- footer -->
     <footer>
       <h3>Kontakt mig</h3>
       <ul>
