all over the place

--- a/index.html
+++ b/index.html
@@ -25,87 +25,87 @@
       </button>
     </header>
     <main>
-      <article class="scrollWrapper">
-        <!-- intro -->
-        <section id="intro" class="scrollSection">
-          <div class="maxWidth grid1-1">
-            <div class="col">
-              <h2>Hello World!</h2>
-              <h1>Jeg er Penny</h1>
-              <p class="tagline">Aspirerende frontend udvikler</p>
-              <p>- nysgerrig, kreativ og vild med webdesign. Her kan du hurtigt finde mine kontaktoplysninger og se, hvad jeg brænder for.</p>
+      <!-- intro -->
+      <section id="intro" class="decoration">
+        <div class="grid1-1">
+          <div class="col">
+            <h2>Hello World!</h2>
+            <h1>Penny Kristiansen</h1>
+            <p class="tagline">Aspirerende frontend udvikler</p>
+            <p>- nysgerrig, kreativ og vild med webdesign. Her kan du hurtigt finde mine kontaktoplysninger og se, hvad jeg brænder for.</p>
 
-              <div class="grid1-1">
-                <a href="#skills"> Mine kompetencer</a>
-                <a href="#projects">Tidligere projekter</a>
-              </div>
-            </div>
-            <img id="portait" src="pennyKristiansen.webp" alt="portræt billede af Penny Kristiansen" />
-          </div>
-        </section>
-
-        <!-- get to know me -->
-        <section id="whyMe" class="scrollSection">
-          <div class="maxWidth grid1-1">
-            <div class="col">
-              <h2>Hvem er jeg?</h2>
-              <p>Kort om mig. Jeg er 21 år gammel. Jeg har stor interesse for film og musik, derudover vil jeg aldrig klage over en dag i naturen.</p>
-              <p>Jeg er en kreativ sjæl, der elsker at skabe og designe. Jeg er meget nysgerrig og elsker at lære nye ting, især når det kommer til kodning og webudvikling.</p>
-            </div>
-            <div class="col">
-              <h3>hvad vil jeg gerne?</h3>
-              <p>I mit kommende praktikforløb ønsker jeg at styrke mine kompetencer inden for frontend-udvikling og udvide min horisont inden for kodning. Jeg vil samtidig arbejde på at blive endnu mere komfortabel med UI/UX-design og skabe brugervenlige digitale oplevelser.</p>
-            </div>
-            <div class="col funFacts">
-              <h3>Fun facts om mig</h3>
-              <!-- gets content from script -->
-              <p id="funFactContainer"></p>
+            <div class="btn">
+              <a href="#skills">Kompetencer</a>
+              <a href="#projects">Projekter</a>
             </div>
           </div>
-        </section>
+          <img id="portait" src="pennyKristiansen.webp" alt="portræt billede af Penny Kristiansen" />
+        </div>
+      </section>
 
-        <!-- skills -->
-        <section id="skills" class="scrollSection">
-          <div class="maxWidth">
-            <h2>kompetencer</h2>
-            <p>Her er en lille oversigt over nogen af de ting jeg har arbejdet med:</p>
-            <div class="grid1-1-1">
-              <div class="col">
-                <h3>programmering</h3>
-                <ul>
-                  <li>HTML, CSS og JS</li>
-                  <li>Astro</li>
-                  <li>Git/GitHub</li>
-                  <li>React <span class="colorHighlight">(under læring)</span></li>
-                  <li>node.js <span class="colorHighlight">(under læring)</span></li>
-                </ul>
-              </div>
-              <div class="col">
-                <h3>design</h3>
-                <ul>
-                  <li>figma</li>
-                  <li>Adobe Illustrator</li>
-                  <li>Adobe after effects</li>
-                  <li>Adobe Photoshop</li>
-                </ul>
-              </div>
-              <div class="col">
-                <h3>sprog</h3>
-                <ul>
-                  <li>Dansk</li>
-                  <li>Engelsk</li>
-                </ul>
-              </div>
+      <!-- get to know me -->
+      <section id="whyMe" class="scrollSection">
+        <div class="grid1-1">
+          <div class="col">
+            <h2>Hvem er jeg?</h2>
+            <p>Kort om mig. Jeg er 21 år gammel. Jeg har stor interesse for film og musik, derudover vil jeg aldrig klage over en dag i naturen.</p>
+            <p>Jeg er en kreativ sjæl, der elsker at skabe og designe. Jeg er meget nysgerrig og elsker at lære nye ting, især når det kommer til kodning og webudvikling.</p>
+          </div>
+          <div class="col">
+            <h3>hvad vil jeg gerne?</h3>
+            <p>I mit kommende praktikforløb ønsker jeg at styrke mine kompetencer inden for frontend-udvikling og udvide min horisont inden for kodning. Jeg vil samtidig arbejde på at blive endnu mere komfortabel med UI/UX-design og skabe brugervenlige digitale oplevelser.</p>
+          </div>
+          <div class="col funFacts">
+            <h3>Fun facts om mig</h3>
+            <!-- gets content from script -->
+            <p id="funFactContainer"></p>
+          </div>
+        </div>
+      </section>
+
+      <!-- skills -->
+      <section id="skills" class="scrollSection">
+        <div class="maxWidth">
+          <h2>kompetencer</h2>
+          <p>Her er en lille oversigt over nogen af de ting jeg har arbejdet med:</p>
+          <div class="grid1-1-1">
+            <div class="col">
+              <h3>programmering</h3>
+              <ul>
+                <li>HTML, CSS og JS</li>
+                <li>Astro</li>
+                <li>Git/GitHub</li>
+                <li>React <span class="colorHighlight">(under læring)</span></li>
+                <li>node.js <span class="colorHighlight">(under læring)</span></li>
+              </ul>
+            </div>
+            <div class="col">
+              <h3>design</h3>
+              <ul>
+                <li>figma</li>
+                <li>Adobe Illustrator</li>
+                <li>Adobe after effects</li>
+                <li>Adobe Photoshop</li>
+              </ul>
+            </div>
+            <div class="col">
+              <h3>sprog</h3>
+              <ul>
+                <li>Dansk</li>
+                <li>Engelsk</li>
+              </ul>
             </div>
           </div>
-        </section>
+        </div>
+      </section>
 
-        <!-- previous projects -->
-        <section id="projects" class="scrollSection">
-          <div class="maxWidth">
-            <h2>tidligere projekter</h2>
+      <!-- previous projects -->
+      <section id="projects">
+        <div class="maxWidth">
+          <h2>tidligere projekter</h2>
+          <div class="grid1-1-1">
             <!-- about: hillerød bowlsklub -->
-            <div class="grid1-1-1">
+            <div class="projectCard">
               <h3>Hillerød bowlsklub</h3>
               <p>Eksamensprojektet på 2.semester omhandlede et komplet redesign af hillerød bowlsklub's hjemmeside. Produktet blev lavet i astro som jeg var hovedansvarlig for.</p>
               <ul>
@@ -117,10 +117,9 @@
                 </li>
               </ul>
             </div>
-            <div class="partialDivider"></div>
 
             <!-- about: to-do list -->
-            <div class="grid1-1-1">
+            <div class="projectCard">
               <h3>To-do liste</h3>
               <p>To-do liste, med fokus på arrays og funktioner som localStorage</p>
               <ul>
@@ -132,10 +131,9 @@
                 </li>
               </ul>
             </div>
-            <div class="partialDivider"></div>
 
             <!-- about: cirkulær lab -->
-            <div class="grid1-1-1">
+            <div class="projectCard">
               <h3>cirkulær lab</h3>
               <p>Et casearbejde med EK's Cirkulær lab, projektet blev lavet i astro og havde særligt fokus på at lave Fetche data fra Supabase</p>
               <ul>
@@ -148,8 +146,8 @@
               </ul>
             </div>
           </div>
-        </section>
-      </article>
+        </div>
+      </section>
     </main>
     <!-- footer -->
     <footer>
