change name on animation.css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ansøgning Penny Kristiansen</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="layout.css" />
-    <link rel="stylesheet" href="animations.css" />
+    <link rel="stylesheet" href="darkmode.css" />
     <script src="script.js"></script>
     <!-- SUSE Monos -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
